ingress_testing/control-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowable-control-ing
  labels:
    app: flowable-control-ing
spec:
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: flowable-control-ing
  #type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flowable-control-ing
spec:
  selector:
    matchLabels:
      app: flowable-control-ing
  template:
    metadata:
      labels:
        app: flowable-control-ing
    spec:
      containers:
      - env:
        - name: flowable.common.app.idm-admin.user
          value: admin
        - name: flowable.common.app.idm-admin.password
          value: test 
        - name: flowable.control.app.cluster-config.server-address
          value: http://20.85.70.97:8080
          #value: http://engage-poc-dev-mgmtvm.eastus2.cloudapp.azure.com/flowable-work 
        - name: flowable.control.app.cluster-config.port
          value: "8080" 
        - name: flowable.control.app.cluster-config.context-root
          value: /
        - name: flowable.control.app.cluster-config.password
          value: test 
        - name: server.servlet.context-path
          value: /
        - name: spring.datasource.driver-class-name
          value: org.postgresql.Driver
        - name: spring.datasource.url
          value: jdbc:postgresql://engage-poc-dev-pg3.postgres.database.azure.com:5432/flowable
        - name: spring.datasource.username 
          value: postgres@engage-poc-dev-pg3
        - name: spring.datasource.password
          value: engage123!          
        image: artifacts.flowable.com/flowable/flowable-control:latest
        name: flowable-control
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
      imagePullSecrets:
        - name: quickstart-flowable-regcred
