ingress_testing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flowable-ingress-ing
  annotations:
    #kubernetes.io/ingress.class: azure/application-gateway
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    #kubernetes.io/ingress.class: addon-http-application-routing
   # nginx.ingress.kubernetes.io/ssl-redirect: "false"
   # nginx.ingress.kubernetes.io/use-regex: "true"
   # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /flowable-control-ing
        pathType: Exact
        backend:
          service:
            name: flowable-control-ing
            port:
              number: 8080
      - path: /flowable-design-ing
        pathType: Exact
        backend:
          service:
            name: flowable-design-ing
            port:
              number: 8080
      - path: /flowable-work-ing
        pathType: Exact
        backend:
          service:
            name: flowable-work-ing
            port:
              number: 8080
      - path: /
        pathType: Exact
        backend:
          service:
            name: flowable-work-ing
            port:
              number: 8080
